# Raff

./: .gitignore  DESCRIPTION  NAMESPACE  README.md  configure  configure.ac
R/: aff.R
man/: aff_read_key.Rd  aff_read_key_list.Rd
src/: aff_read.c  aff_read_R_interface.c
